WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123943
Remote Layer Tree: RemoteLayerTreeDrawingArea doesn't make layers for fixedpos elements
https://bugs.webkit.org/show_bug.cgi?id=123943
Summary
Remote Layer Tree: RemoteLayerTreeDrawingArea doesn't make layers for fixedpo...
Tim Horton
Reported
2013-11-06 17:27:19 PST
But it should, just like TiledCoreAnimationDrawingArea does.
Attachments
patch
(3.64 KB, patch)
2013-11-06 17:45 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-11-06 17:38:57 PST
<
rdar://problem/15400615
>
Tim Horton
Comment 2
2013-11-06 17:45:00 PST
Created
attachment 216251
[details]
patch
Tim Horton
Comment 3
2013-11-06 18:00:35 PST
http://trac.webkit.org/changeset/158808
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug