Remote Layer Tree: RemoteLayerTreeDrawingArea doesn't make layers for fixedpos elements https://bugs.webkit.org/show_bug.cgi?id=123943

Reviewed by Simon Fraser.

* WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.h:
* WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::updatePreferences):
Make fixed position elements create compositing layers and stacking contexts
in the RemoteLayerTreeDrawingArea just like they do in TiledCoreAnimationDrawingArea.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::updatePreferences):
Fix the comment, since we have long since achieved this goal.


Canonical link: https://commits.webkit.org/142124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158808 268f45cc-cd09-0410-ab3c-d52691b4dbfc